[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-volume-backup"
dynamic = ["version"]
description = 'A simple Python script to backup docker volumes to Azure Storage'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Madalin Popa", email = "contact@madalinpopa.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "docker == 7.0.0",
  "azure-storage-blob == 12.19.0",
  "azure-identity == 1.15.0",
]

[tool.hatch.version]
path = "src/docker_volume_backup/__about__.py"

[project.urls]
Documentation = "https://github.com/unknown/docker-volume-backup#readme"
Issues = "https://github.com/unknown/docker-volume-backup/issues"
Source = "https://github.com/unknown/docker-volume-backup"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "ruff",
  "black"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests} -vs"
test-cov = "coverage run -m pytest {args:tests}"
