[metadata]
name = backup
version = 1.0.0
author = Madalin Popa
author_email = contact@madalinpopa.com
description = A simple command line tool to backup docker volumes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Utilities
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12

[options]
package_dir =
  =src
packages = find:
include_package_data = True
install_requires =
    azure-identity==1.15.0
    azure-storage-blob==12.19.0
    docker==7.0.0
    python-dotenv==1.0.0

[options.packages.find]
where = src
exclude =
  test*

[options.entry_points]
console_scripts =
  volume-backup = volume_backup.main:main
